# BlurDir

./: CMakeLists.txt  README.md
misc/Test_files/: 1.txt
src/: embedder.c  library.cpp  libtest.cpp  main.cpp
